<resources>
    <string name="app_name">Tesis-RRA</string>
    <string name="enter_email"> E-mail  </string>


    //Strings Loguin
    <string name="buttonIniciarSesion">Iniciar Sesión</string>
    <string name="buttonRegistrarte">Registrarte</string>
    <string name="buttonIniciarSesionMaestro">Iniciar Sesión (Maestro)</string>
    <string name="imageViewUV"></string>
    <string name="editTextContrasena">Universidad Veracruzana</string>
    <string name="textViewUniversidadVeracruzana">Universidad Veracruzana</string>
    <string name="textViewRegistro">¿Aún no te has registrado? Registrate</string>


    //Strings Registro
    <string name="buttonRegistrarseR">Registrarse</string>
    <string name="textViewUsuarioR">Nombre de Usuario*</string>
    <string name="textViewEmailR">Email*</string>
    <string name="textViewContrasenaR">Contrasena*</string>
    <string name="title_activity_home_principal">HomePrincipal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_perfil">Mi Perfil</string>
    <string name="menu_home">Home</string>
    <string name="menu_repositorios">Repositorios</string>
    <string name="menu_ejemplos">Ejemplos</string>
    <string name="menu_configuracion">Configuración</string>
    <string name="menu_informacion">Información</string>
    <string name="menu_cerrar_sesion">Cerrar sesión</string>
    <string name="home_second">Home Second</string>
    <string name="title_activity_home_drawer">HomeDrawer</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
